# Analyzing-AMeDAS-Rainfall-and-Railway-Disaster-Prevention-Indices-App

./: .gitattributes  .gitignore  README.md  app.py  create_desktop_shortcut.bat  install.bat  pyproject.toml  requirements.txt  run.bat
config/: default.yaml  tank_model.yaml
core/: Cargo.toml  README.md
core/examples/: benchmark.rs  benchmark_python.py
core/src/: annual_maxima.rs  bootstrap.rs  continuous_rainfall.rs  effective_rainfall.rs  gumbel.rs  lib.rs  normalization.rs  quality.rs  rolling_rainfall.rs  soil_tank.rs
core/tests/: golden.rs
docs/: calculation_method.md  jma_download.md  language_migration_plan.md  specification.md  validation.md
scripts/: build_ca_bundle.py
src/amedas_rainfall/: __init__.py  config.py  models.py  pipeline.py  reporting.py
src/amedas_rainfall/indices/: __init__.py  continuous_rainfall.py  effective_rainfall.py  rolling_rainfall.py  soil_tank.py
src/amedas_rainfall/jma/: __init__.py  ca_bundle.py  csv_parser.py  direct_client.py  download_manager.py  playwright_client.py  start_date_finder.py  station_catalog.py
src/amedas_rainfall/processing/: __init__.py  merging.py  normalization.py  quality.py
src/amedas_rainfall/statistics/: __init__.py  annual_maxima.py  bootstrap.py  gumbel.py
src/amedas_rainfall/storage/: __init__.py  database.py  repositories.py
tests/: test_annual_maxima.py  test_continuous_rainfall.py  test_csv_parser.py  test_effective_rainfall.py  test_gumbel.py  test_reporting.py  test_rolling_rainfall.py  test_soil_tank.py
tests/fixtures/: sample_normal_cp932.csv  sample_overlap_cp932.csv
(+24 files in other folders)
