[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amedas-rainfall"
version = "0.1.0"
description = "アメダス長期雨量・鉄道防災指標解析アプリ"
requires-python = ">=3.11,<3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
