[package]
name = "amedas-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "amedas_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
serde_json = "1"
